# agent-monitor

./: .gitignore  LICENSE  README.md  agent-monitor.yaml  alert_rules.yaml  pyproject.toml
src/agent_monitor/: __init__.py  config.py  main.py
src/agent_monitor/alerting/: __init__.py  engine.py  notifiers.py  rules.py
src/agent_monitor/api/: server.py  websocket.py
src/agent_monitor/api/routes/: agents.py  alerts.py  history.py  system.py
src/agent_monitor/collectors/: __init__.py  base.py  claude_code.py  codex.py  gpu.py  hermes.py  log_analyzer.py  openclaw.py  process.py  registry.py  system.py
src/agent_monitor/dashboard/templates/: agents.html  base.html  history.html  index.html
src/agent_monitor/storage/: retention.py  schema.sql  sqlite_store.py
